draft keycloak integration

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,4 +1,5 @@
 generateAPI:
+	rm -rf ./generated
 	swagger generate server -f ./be.yaml -s ./generated/swagger/restapi -m ./generated/swagger/models --exclude-main
 
 build:
