--- a/backend/config.json
+++ b/backend/config.json
@@ -1,6 +1,6 @@
 {
   "Keycloak": {
-    "Url": "http://keycloak:8080",
+    "Url": "http://localhost:8080",
     "Realm": "test",
     "AdminUser": "admin",
     "AdminPassword": "Pa55w0rd",
@@ -8,6 +8,6 @@
   },
   "Server": {
     "Host": "",
-    "Port": 8080
+    "Port": 8082
   }
 }
